--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=db-service
 server.port=8300
 
+#mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password =root
@@ -10,3 +11,14 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/test
+#spring.datasource.username=postgres
+#spring.datasource.password =root
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
